--- a/app/templates/generating.html
+++ b/app/templates/generating.html
@@ -12,10 +12,11 @@
                         <i class="fas fa-magic fa-5x text-primary rotating"></i>
                     </div>
 
-                    <h2 class="mb-4">AI is Creating Your Calendar...</h2>
+                    <h2 class="mb-4">AI is Transforming You into 12 Hunks...</h2>
 
                     <p class="lead mb-4">
-                        This takes 5-10 minutes. Feel free to close this page and return later!
+                        We're putting your face on ridiculously sexy bodies! This takes 5-10 minutes.
+                        Feel free to close this page and return later!
                     </p>
 
                     <div class="progress mb-4" style="height: 30px;">
